--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
             <div class="d-flex justify-content-between align-items-center w-100">
                 <!-- Logo a la izquierda -->
                 <a href="/" title="Home" rel="Home">
-                    <img style="width: 50px;" src="../../../assets/img/logo.png" alt="Home">
+                    <img style="width: 50px;" src="../../../assets/img/icono.png" alt="Home">
                 </a>
 
                 <!-- Íconos a la derecha -->
