--- a/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
+++ b/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
@@ -10,7 +10,7 @@
                     <div class="card h-100 shadow-sm text-center">
                         <div class="card-body d-flex flex-column align-items-center justify-content-center p-3">
                             <img class="brand-image" [src]="marca.image" [alt]="'Logo de ' + marca.name">
-                            <h6 class="brand-name mt-2 mb-0">{{marca.name | titlecase}}</h6>
+                            <h6 class="brand-name mt-2 mb-0">{{marca.name | uppercase}}</h6>
                         </div>
                     </div>
                 </a>
