Correccion de marcas, editar modelo

--- a/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
+++ b/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
@@ -74,7 +74,7 @@
                     </div>
                 </ng-container>
             </ng-container>
-            <ng-template #noRepuestos>
+            <ng-template #noRepuestos class="w-100">
                             <div class="col-12 w-100">
                     <h3 class="text-center mt-5 text-muted">No se encontraron repuestos.</h3>
                 </div>
