--- a/src/app/components/marcas/marcas.component.html
+++ b/src/app/components/marcas/marcas.component.html
@@ -174,7 +174,7 @@
     </button>
     <button mat-menu-item (click)="abrirDialogoEditarModelo(marca._id!, marca.name!, modelo._id!)">
       <mat-icon>edit</mat-icon>
-      <a href="/edit-marca">Editar modelo</a>
+      <a>Editar modelo</a>
     </button>
     <button mat-menu-item (click)="abrirDialogoEliminar(modelo._id!, modelo.name!, nodoSeleccionado)">
       <mat-icon>delete</mat-icon>
