--- a/src/app/components/buscar-repuesto/buscar-repuesto.component.html
+++ b/src/app/components/buscar-repuesto/buscar-repuesto.component.html
@@ -12,18 +12,19 @@
                 </div>
                 <form class="filters-form card p-3 mt-2 shadow-sm">
                     <select class="form-select mb-3 custom-select" name="categoria" [ngModel]="selectedCategory"
-                        (change)="cambiarCategoria($event)"
-                        [ngClass]="{'placeholder-color': !categoria.value}" #categoria
-                        aria-label="Seleccione la categoría">
+                        (change)="cambiarCategoria($event)" [ngClass]="{'placeholder-color': !categoria.value}"
+                        #categoria aria-label="Seleccione la categoría">
                         <option value="" disabled selected>Seleccione la categoría</option>
-                        <option class="text-dark" *ngFor="let cat of categorias" [value]="cat.name">{{ cat.name }}</option>
+                        <option class="text-dark" *ngFor="let cat of categorias" [value]="cat.name">{{ cat.name }}
+                        </option>
                     </select>
 
                     <select class="form-select  custom-select" name="brand" (change)="cambiarMarca($event)"
                         [ngModel]="selectedBrand" [ngClass]="{'placeholder-color': !brand.value}" #brand
                         aria-label="Seleccione la marca">
                         <option value="" disabled selected>Seleccione la marca</option>
-                        <option class="text-dark" *ngFor="let marca of marcas" [value]="marca.name">{{ marca.name }}</option>
+                        <option class="text-dark" *ngFor="let marca of marcas" [value]="marca.name">{{ marca.name }}
+                        </option>
                     </select>
 
                     <select *ngIf="modelos.length > 0" class="form-select mt-3 custom-select" name="brandModel"
@@ -31,7 +32,8 @@
                         [ngClass]="{'placeholder-color': !brandModel.value}" #brandModel
                         aria-label="Seleccione el modelo">
                         <option value="" disabled selected>Seleccione el modelo</option>
-                        <option class="text-dark" *ngFor="let modelo of modelos" [value]="modelo.name">{{ modelo.name }}</option>
+                        <option class="text-dark" *ngFor="let modelo of modelos" [value]="modelo.name">{{ modelo.name }}
+                        </option>
                     </select>
 
                     <select *ngIf="tipos.length > 0" class="form-select mt-3 custom-select" name="modelType"
@@ -39,16 +41,23 @@
                         [ngClass]="{'placeholder-color': !modelType.value}" #modelType
                         aria-label="Seleccione el tipo de modelo">
                         <option value="" disabled selected>Seleccione el tipo</option>
-                        <option class="text-dark" *ngFor="let tipo of tipos" [value]="tipo.name">{{ tipo.name }}</option>
+                        <option class="text-dark" *ngFor="let tipo of tipos" [value]="tipo.name">{{ tipo.name }}
+                        </option>
                     </select>
 
-                    <select *ngIf="anios.length > 0" class="form-select custom-select mt-3" name="anio"
-                        [ngModel]="selectedYear" (change)="cambiarAnio($event)"
-                        [ngClass]="{'placeholder-color': !anio.value}" #anio
-                        aria-label="Seleccione el año">
-                        <option value="" disabled selected>Seleccione el año</option>
-                        <option class="text-dark" *ngFor="let anio of anios" [value]="anio">{{ anio }}</option>
-                    </select>
+                    <div class="mt-3">
+                        <input type="number" [(ngModel)]="selectedYear" name="anio" required
+                            placeholder="Ingrese el año" #yearInput="ngModel" class="form-control form-control-search" id="anio" min="1900"
+                            max="{{ getCurrentYear() + 5 }}" step="1" (ngModelChange)="cambiarAnio(selectedYear)">
+                        <div *ngIf="yearInput.invalid && (yearInput.dirty || yearInput.touched)">
+                            <small class="form-text text-danger" *ngIf="yearInput.errors?.['min']">
+                                El año debe ser {{ yearInput.errors?.['min']?.min }} o posterior.
+                            </small>
+                            <small class="form-text text-danger" *ngIf="yearInput.errors?.['max']">
+                                El año no puede ser posterior a {{ yearInput.errors?.['max']?.max }}.
+                            </small>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -85,20 +94,22 @@
                                                         class="text-decoration-none small">Marca VHC:
                                                         {{repuesto.brand}}</a>
                                                 </p>
-                                                <h4 class="product-price fw-bold mt-2">
-                                                    <span>Precio: ${{repuesto.price | number:'1.2-2'}}</span>
-                                                </h4>
+                                                <h6 class="product-price fw-bold mt-2">
+                                                    <span>Precio: ${{repuesto.price | number:'1.2-2'}} + IVA</span>
+                                                </h6>
                                             </div>
                                         </a>
                                         <div class="border-0 mt-0 mb-3 mx-3">
                                             <button class="btn add-to-cart-btn w-100" type="button" mat-raised-button
-                                                [color]="!isAdded[i] ? 'primary' : 'link'" (click)="agregarAlCarrito(repuesto, i)"
+                                                [color]="!isAdded[i] ? 'primary' : 'link'"
+                                                (click)="agregarAlCarrito(repuesto, i)"
                                                 [disabled]="isAddingToCart[i] || isAdded[i]">
                                                 <span *ngIf="!isAdded[i] && !isAddingToCart[i]">
                                                     <i class="bi bi-cart-plus-fill me-2"></i> Agregar al carrito
                                                 </span>
                                                 <span *ngIf="isAddingToCart[i]">
-                                                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                                    <span class="spinner-border spinner-border-sm" role="status"
+                                                        aria-hidden="true"></span>
                                                     Agregando...
                                                 </span>
                                                 <span *ngIf="isAdded[i]">
