--- a/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
+++ b/src/app/components/catalogo-repuestos/catalogo-repuestos.component.html
@@ -49,9 +49,9 @@
                                         <a href="/spare-part?brand={{repuesto.brand}}"
                                             class="text-decoration-none small">Marca VHC: {{repuesto.brand}}</a>
                                     </p>
-                                    <h4 class="product-price fw-bold text-primary mt-2">
-                                        <span>Precio: ${{repuesto.price | number:'1.2-2'}}</span>
-                                    </h4>
+                                    <h6 class="product-price fw-bold text-primary mt-2">
+                                        <span>Precio: ${{repuesto.price | number:'1.2-2'}} + IVA</span>
+                                    </h6>
                                 </div>
                             </a>
                             <div class="border-0 pt-0 pb-3 px-3">
