--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="mt-4 mb-3">
                     <button type="button" mat-raised-button class="w-100 p-4 button-email" (click)="mostrarSeccion2()">
-                        <i class="bi bi-envelope"></i> Continuar con email
+                        <i class="bi bi-envelope"></i> Continuar con correo electrónico
                     </button>
                 </div>
                 <div class="separator mt-3 mb-3">
